--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prop-types": "15.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router": "^3.2.0"
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
