--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start --single-run",
+    "lint": "eslint . --ext .js,.jsx",
     "start": "webpack-dev-server --inline --content-base ./",
     "build": "npm run imagemin && NODE_ENV=production webpack",
     "imagemin": "./scripts/imagemin"
@@ -16,6 +17,7 @@
   "author": "Matt Zabriskie",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "classnames": "^2.2.5",
     "moment": "^2.14.1",
     "prop-types": "15.6.1",
@@ -29,6 +31,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "file-loader": "^0.8.5",
     "imagemin": "^4.0.0",
     "imagemin-pngquant": "^4.2.2",
